Clear GEMINI_API_KEY in .env.example
Removed the example API key for security reasons.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Copy to .env and set your real key
-GEMINI_API_KEY=AIzaSyDVCKQnVciKuoXu115IHTjwqccxGwfC4fs
+GEMINI_API_KEY=
 # If Rasa is hosted elsewhere, update this:
 RASA_URL=http://localhost:5005/webhooks/rest/webhook
